# kernel_common

./: .gitignore  BUILD.bazel  Kbuild  Makefile  aoc.c  aoc.h  bigo_pm.c  build.config.gs101  build.config.gs201  build.config.slider  build_slider.sh  device.bazelrc  dhd.h  dhd_bus.h  dhd_custom_google.c  dhd_linux.c  dhd_linux_exportfs.c  dhd_linux_platdev.c  dhd_msgbuf.c  dhd_pcie.c  dhd_plat.h  gs101_gki.fragment  max77759_charger.c  p9221_charger.c  p9221_charger.h  p9221_chip.c  vendor_boot_modules.slider  vendor_kernel_boot_modules.gs201  wl_cfg80211.c  wl_cfgnan.c  wl_cfgp2p.c  wl_cfgvendor.c  wl_cfgvif.c  wl_cfgvif.h  wldev_common.c
alsa/: BUILD.bazel  Kbuild  aoc_alsa.h  aoc_alsa_card.c  aoc_alsa_ctl.c  aoc_alsa_hw.c  aoc_alsa_path.c  aoc_alsa_usb.c
arch/arm64/boot/dts/google/: Makefile  gs101-common-gps.dtsi  gs101-common.dtsi  gs101-cpu.dtsi  gs101-gpu.dtsi  gs101-pcie.dtsi  gs101-pmic.dtsi  gs101-raven-battery.dtsi  gs101-raven-uwb.dtsi  gs101-raviole-audio.dtsi  gs101-raviole-battery.dtsi  gs101-raviole-charging.dtsi  gs101-raviole-sbbm.dtsi  gs101-raviole-thermal.dtsi  gs101-raviole-usecases.dtsi  gs101-raviole-wcharger.dtsi  gs101-rmem.dtsi  gs101-s2mpu.dtsi  gs101-slider-audio.dtsi  gs101-slider-battery.dtsi  gs101-slider2-audio.dtsi  gs101-usi.dtsi  gs101.dtsi  gs201-cheetah-audio.dtsi  gs201-cheetah-battery.dtsi  gs201-cheetah-charging.dtsi  gs201-cheetah-touch.dtsi  gs201-cloudripper-audio.dtsi  gs201-cloudripper-battery.dtsi  gs201-cloudripper-ese.dtsi  gs201-cloudripper-nfc.dtsi  gs201-cloudripper-usecases.dtsi  gs201-common-gps.dtsi  gs201-common.dtsi  gs201-cpu.dtsi  gs201-gpu.dtsi  gs201-pantah-charging.dtsi  gs201-pantah-wcharger.dtsi  gs201-panther-touch.dtsi  gs201-pcie.dtsi  (+7 more)
arch/arm64/configs/: cloudripper_gki.fragment  raviole-stock_defconfig  raviole_defconfig  slider_gki.fragment
arch/arm64/kvm/hyp/nvhe/: Makefile
cs40l25/: cs40l2x.c
drivers/bts/: regs-btsgs.h
drivers/cpufreq/: exynos-acme.c
drivers/devfreq/google/: Kbuild  Kconfig  arm-memlat-mon-legacy.c  governor_memlat.c  governor_memlat.h  gs-devfreq.c  memlat-devfreq.c
drivers/dma-buf/heaps/samsung/: samsung_heap.c
drivers/edgetpu/: BUILD.bazel  abrolhos-thermal.c
drivers/gpu/exynos/g2d/: g2d_drv.c
drivers/iio/power/: Kbuild  Kconfig  odpm_legacy.c
drivers/iommu/: exynos-pcie-iommu-legacy.c  samsung-iommu.c  samsung-iommu.h
drivers/media/platform/exynos/mfc/: mfc_debugfs.c
drivers/media/platform/exynos/smfc/: smfc-dev.c
drivers/mfd/: Kbuild
drivers/pci/controller/dwc/: Kconfig  pcie-exynos-common.h  pcie-exynos-gs101-rc-cal.c  pcie-exynos-gs201-rc-cal.c  pcie-exynos-rc.c  pcie-exynos-rc.h
drivers/performance/gs_perf_mon/: gs_perf_mon.c
drivers/phy/samsung/: phy-exynos-usbdrd-eusb.c  phy-exynos-usbdrd.c  phy-exynos-usbdrd.h
drivers/pinctrl/gs/: Kbuild  pinctrl-samsung.c  pinctrl-samsung.h
drivers/regulator/: s2mpg10-powermeter.c  s2mpg12-powermeter.c  s2mpg13-powermeter.c
drivers/rtc/: Kconfig
drivers/soc/google/: Kbuild  Kconfig  exynos-pd.c  exynos-pm.c  exynos_pm_qos.c
drivers/soc/google/acpm/: acpm_ipc.c  power_stats.c
drivers/soc/google/acpm/fw_header/: common.h
drivers/soc/google/cal-if/: pmucal_rae.c
drivers/soc/google/cpif/: link_device.c  s51xx_pcie.c
drivers/soc/google/debug/: debug-snapshot-log.c
drivers/soc/google/pkvm-s2mpu/common/: pkvm_s2mpu.c  s2mpu.c
drivers/thermal/google/: Kconfig  google_bcl_legacy.c  s2mpg13_spmic_thermal.c
drivers/thermal/samsung/: Kbuild  Kconfig  exynos_cpu_cooling.c
drivers/ufs/: Kbuild  ufs-exynos.c  ufs-pixel-crypto.c
drivers/ufs/gs201/: ufs-pixel-fips.c
drivers/usb/dwc3/: dwc3-exynos-otg.c  dwc3-exynos.c
drivers/usb/host/: xhci-exynos.c  xhci-exynos.h  xhci-mem.c
drivers/watchdog/: s3c2410_wdt.c
dts/: Makefile
fs/: exec.c
fst2/: Kbuild  Makefile
fst2/fts_lib/: fts_test.c
ftm5/fts_lib/: ftsIO.c
google-devices/slider/: BUILD.bazel  vendor_boot_modules.slider
google-devices/slider/dts/: BUILD.bazel
google-modules/: Makefile
google-modules/aoc/: BUILD.bazel  Kbuild  Makefile  aoc.c
google-modules/aoc/alsa/: Kbuild  Makefile  aoc_alsa.h  aoc_alsa_hw.c  aoc_alsa_usb.c
google-modules/aoc/usb/: aoc_usb.h  usb_hooks_impl_whi.c  xhci_hooks_impl_whi.c
google-modules/bms/: google_battery.c  max77759_charger.h  p9221_charger.c  p9221_chip.c
google-modules/bms/misc/: BUILD.bazel
google-modules/display/samsung/: Kbuild  exynos_drm_dqe.c  exynos_drm_dsim.c
google-modules/display/samsung/cal_common/: dqe_cal.h
google-modules/display/samsung/panel/: panel-samsung-drv.h  panel-samsung-s6e3fc3-p10.c  panel-samsung-s6e3fc3.c  panel-samsung-s6e3hc3.c  panel-samsung-s6e3hc4.c
google-modules/gpu/mali_kbase/: Kbuild  Makefile  mali_kbase_debugfs_helper.c
google-modules/gpu/mali_kbase/csf/: mali_kbase_csf_scheduler.c
google-modules/lwis/: lwis_i2c_bus_manager.c  lwis_util.c
google-modules/soc/gs/: BUILD.bazel  build.config.gs201  vendor_boot_modules.slider  vendor_kernel_boot_modules.zuma
google-modules/touch/fts/fst2/: BUILD.bazel
google-modules/video/gchip/: BUILD.bazel  Makefile  bigo.c  bigo_priv.h
google-modules/wlan/bcm4389/: Kbuild  dhd_common.c  dhd_custom_google.c  dhd_linux_priv.h  dhd_pcie.c  dhd_pcie.h  fwpkg_utils.c  wl_android.c  wl_cfg80211.c  wl_cfgscan.c  wl_cfgvif.c
google-modules/wlan/bcm4389/include/: pcie_core.h
include/soc/google/: bcl.h  exynos-pd.h  odpm_legacy.h
kernel/: BUILD.bazel  Makefile  exit.c
mali_kbase/: Makefile
mali_kbase/csf/: mali_kbase_csf_scheduler.c
mali_kbase/platform/pixel/: mali_kbase_config_platform.h  pixel_gpu.c  pixel_gpu_power.c
samsung/: BUILD.bazel  Kbuild  Makefile  exynos_drm_dsim.c
samsung/cal_9855/: dqe_reg.c
samsung/cal_common/: dqe_cal.h
samsung/panel/: panel-samsung-s6e3fc3-p10.c  panel-samsung-s6e3fc3.c  panel-samsung-s6e3hc3.c  panel-samsung-s6e3hc4.c
scripts/: Makefile.build  Makefile.dtboinst  Makefile.lib
scripts/dtc-aosp/: Makefile
usb/: Kbuild  aoc_usb.h  aoc_usb_dev.c  snd_usb_audio_hook_impl_whi.c  usb_hooks_impl_whi.c  xhci_hooks_impl_whi.c
(+94 files in other folders)
